--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "angular-archwizard": "3.0.0",
     "angular-calendar": "0.26.3",
     "bootstrap": "4.1.3",
+    "bpmn-js": "^4.0.0",
     "chartist": "0.11.0",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.7",
