--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.7",
     "d3": "5.7.0",
+    "d3-graphviz": "^2.6.1",
     "datatables.net": "1.10.19",
     "date-fns": "1.29.0",
     "gulp": "4.0.0",
