--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/dragula": "2.1.33",
     "angular-archwizard": "3.0.0",
     "angular-calendar": "0.26.3",
+    "angular2-draggable": "^2.3.2",
     "bootstrap": "4.1.3",
     "bpmn-js": "^4.0.0",
     "chartist": "0.11.0",
