--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/dragula": "2.1.33",
     "angular-archwizard": "3.0.0",
     "angular-calendar": "0.26.3",
+    "angular-plotly.js": "^1.3.2",
     "angular2-draggable": "^2.3.2",
     "bootstrap": "4.1.3",
     "bpmn-js": "^4.0.0",
@@ -66,6 +67,7 @@
     "ngx-ui-switch": "7.0.1",
     "node-sass": "4.9.4",
     "nouislider": "12.0.0",
+    "plotly.js": "^1.49.4",
     "prismjs": "1.15.0",
     "quill": "1.3.6",
     "resize-observer-polyfill": "1.5.0",
