necessay modification for install echarts

--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,10 @@
               "src/styles.css"
             ],
             "scripts": [
-              "src/assets/vendor/pace/pace.min.js"
+              "src/assets/vendor/pace/pace.min.js",
+              "node_modules/echarts/dist/echarts.min.js",
+              "node_modules/echarts/map/js/china.js",
+              "node_modules/echarts/dist/extension/bmap.js"
             ]
           },
           "configurations": {
