--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "d3-graphviz": "^2.6.1",
     "datatables.net": "1.10.19",
     "date-fns": "1.29.0",
+    "echarts": "^4.2.1",
     "gulp": "4.0.0",
     "hopscotch": "0.3.1",
     "intl": "1.2.5",
@@ -62,6 +63,7 @@
     "ng2-smart-table": "1.3.5",
     "ng2-validation": "4.2.0",
     "ngx-chips": "1.9.8",
+    "ngx-echarts": "^4.2.1",
     "ngx-perfect-scrollbar": "5.3.5",
     "ngx-quill": "4.0.0",
     "ngx-toastr": "9.1.1",
@@ -88,6 +90,7 @@
     "@angular/compiler-cli": "7.2.6",
     "@angular/language-service": "7.2.9",
     "@types/core-js": "2.5.0",
+    "@types/echarts": "^4.1.12",
     "@types/jasmine": "2.8.9",
     "@types/node": "10.12.0",
     "codelyzer": "4.5.0",
