package needed to run dagre layout

--- a/angular.json
+++ b/angular.json
@@ -42,7 +42,10 @@
               "src/assets/vendor/pace/pace.min.js",
               "node_modules/echarts/dist/echarts.min.js",
               "node_modules/echarts/map/js/china.js",
-              "node_modules/echarts/dist/extension/bmap.js"
+              "node_modules/echarts/dist/extension/bmap.js",
+              "node_modules/dagre/dist/dagre.js",
+              "node_modules/graphlib/dist/graphlib.js"
+
             ]
           },
           "configurations": {
