--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@swimlane/ngx-datatable": "13.1.0",
     "@types/chartist": "0.9.43",
     "@types/d3-shape": "1.2.4",
+    "@types/dagre": "^0.7.42",
     "@types/dragula": "2.1.33",
     "angular-archwizard": "3.0.0",
     "angular-calendar": "0.26.3",
@@ -47,6 +48,7 @@
     "core-js": "^2.5.7",
     "d3": "5.7.0",
     "d3-graphviz": "^2.6.1",
+    "dagre": "^0.8.4",
     "datatables.net": "1.10.19",
     "date-fns": "1.29.0",
     "echarts": "^4.2.1",
