--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "7.2.9",
     "@angular/platform-server": "7.2.9",
     "@angular/router": "7.2.9",
+    "@antv/g6": "^3.0.7-beta.1",
     "@ng-bootstrap/ng-bootstrap": "4.0.0",
     "@ng-select/ng-select": "2.11.2",
     "@ngrx/store": "6.1.0",
@@ -49,6 +50,7 @@
     "d3": "5.7.0",
     "d3-graphviz": "^2.6.1",
     "dagre": "^0.8.4",
+    "dagre-d3": "^0.6.3",
     "datatables.net": "1.10.19",
     "date-fns": "1.29.0",
     "echarts": "^4.2.1",
